--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: node:8.1.3
+image: addictedcoders/tdb-app
 
 variables:
   GRADLE_OPTS: "-Dorg.gradle.daemon=false"
@@ -9,7 +9,7 @@ stages:
 
 build:
   stage: build
-  script: npm install poi -g && npm install && poi build
+  script: npm install && poi build
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: push
