--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: addictedcoders/tdb-app
+image: registry.gitlab.com/addictedcoders/tdb-app
 
 variables:
   GRADLE_OPTS: "-Dorg.gradle.daemon=false"
