--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,11 +17,15 @@ build:
       - node_modules
   artifacts:
     paths:
-      - dist
+      - dist dist/public
+      - package.json dist
 
 deploy_staging:
   stage: deploy
+  dependencies:
+    - build
   script:
+    - cd dist
     - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
   environment:
     name: tdb-app-staging
