--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,16 +16,18 @@ build:
     paths:
       - node_modules
   artifacts:
+    name: slug
     paths:
-      - dist dist/public
-      - package.json dist
+      - dist
+      - package.json
 
 deploy_staging:
   stage: deploy
   dependencies:
     - build
   script:
-    - cd dist
+    - ls -la | echo
+    - cd slug
     - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
   environment:
     name: tdb-app-staging
