--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,8 @@ deploy_staging:
   dependencies:
     - build
   script:
-    - ls -la /
-    - cd slug
+    - ls -la /builds/addictedcoders/tdb-app
+    - cd /builds/addictedcoders/tdb-app/slug
     - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
   environment:
     name: tdb-app-staging
