--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "npm run set:env && env-cmd .env poi",
     "heroku": "npm run set:env && env-cmd .env poi build && http-server dist -p $PORT",
     "build": "API_URL=http://test.com npm run set:env && env-cmd .env poi build",
-    "heroku:new": "http-server dist -p $PORT"
+    "heroku:new": "http-server public -p $PORT"
   },
   "engines": {
     "node": "8.1.3",
