--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,8 @@ deploy_staging:
     - cp Procfile heroku
     - cd $CI_PROJECT_DIR/heroku
     - git init
+    - git config user.name=dasnervtdoch
+    - git config user.email=dasnervtdoch@googelmail.com
     - heroku git:remote $HEROKU_APP_NAME
     - git add -A && git commit -m $CI_JOB_ID
     - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master -f
