--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ deploy_staging:
     - npm install
     - API_URL=https://tdb-service.herokuapp.com/api npm run build:prod
     - mkdir -p heroku/public
-    - cp dist/* heroku/public
+    - cp public/* heroku/public
     - cp package.json heroku
     - cp Procfile heroku
     - cd $CI_PROJECT_DIR/heroku
@@ -37,4 +37,4 @@ deploy_staging:
     name: tdb-app-staging
     url: https://tdb-app.herokuapp.com/
   only:
-  - master  
+  - master
