--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "tdb-app",
+  "productName": "Test Dashboard",
+  "description": "Test Dashboard",
+  "version": "1.0.0",
+  "main": "src/index.js",
+  "license": "MIT",
   "scripts": {
     "set:env": "node setenv.js > .env",
     "dev": "npm run set:env && env-cmd .env poi",
@@ -11,18 +17,22 @@
     "yarn": "0.27.5"
   },
   "dependencies": {
-    "http-server": "^0.10.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "http-server": "^0.10.0"
   },
   "devDependencies": {
     "babel-plugin-react-require": "^3.0.0",
     "babel-preset-react-app": "^3.1.0",
-    "cross-env": "^5.1.1",
     "env-cmd": "^7.0.0",
     "node-sass": "^4.7.2",
     "poi": "^9.6.1",
-    "poi-preset-react": "^9.2.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "next",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "history": "^4.7.2",
     "sass-loader": "^6.0.6"
   }
 }
