Solve routing in Heroku (attempt 1)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ build:
     - mkdir -p heroku/public
     - cp public/* heroku/public
     - cp package.json heroku
+    - cp static.json heroku
     - cp Procfile heroku
   artifacts:
     paths:
