--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
     "presets": [
-        "react-app", "es2015"
+        "es2015",
+        "react-app"
     ],
     "plugins": [
         "react-require"
