--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-react-require": "^3.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react-app": "^3.1.0",
+    "babel-preset-stage-0": "^6.24.1",
     "env-cmd": "^7.0.0",
     "history": "^4.7.2",
     "jest": "^22.0.4",
@@ -38,7 +39,8 @@
     "react-router-redux": "next",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "sass-loader": "^6.0.6"
+    "sass-loader": "^6.0.6",
+    "semantic-ui-react": "^0.77.1"
   },
   "jest-junit": {
     "suiteName": "tdb-app tests",
