Added lodash dependency, created test run table.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "history": "^4.7.2",
     "jest": "^22.0.4",
     "jest-junit": "^3.4.1",
+    "lodash": "^4.17.4",
     "node-sass": "^4.7.2",
     "poi": "^9.6.1",
     "react": "^16.2.0",
