--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "yarn": "1.3.2"
   },
   "dependencies": {
-    "http-server": "^0.10.0"
+    "chart.js": "^2.7.1",
+    "http-server": "^0.10.0",
+    "react-chartjs-2": "^2.6.4"
   },
   "devDependencies": {
     "babel-jest": "^22.0.4",
