--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ build:
   script: 
     - yarn install
     - npm test
-    # - $CI_PROJECT_DIR/upload.sh -p tdb-app -t $CI_COMMIT_REF_NAME@$CI_PIPELINE_ID
+    - $CI_PROJECT_DIR/upload.sh -p tdb-app -t $CI_COMMIT_REF_NAME@$CI_PIPELINE_ID
     - API_URL=https://tdb-service.herokuapp.com/api npm run build:prod
     - mkdir -p heroku/public
     - cp public/* heroku/public
