--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
     "npm": "5.5.1",
     "yarn": "1.3.2"
   },
-  "dependencies": {
+  "devDependencies": {
     "chart.js": "^2.7.1",
     "http-server": "^0.10.0",
-    "react-chartjs-2": "^2.6.4"
-  },
-  "devDependencies": {
+    "react-chartjs-2": "^2.6.4",
     "babel-jest": "^22.0.4",
     "babel-plugin-react-require": "^3.0.0",
     "babel-preset-es2015": "^6.24.1",
