--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ cache:
   yarn: true  
 
 script: 
+  - ls -la $TRAVIS_BUILD_DIR
   - $TRAVIS_BUILD_DIR/upload.sh -p tdb-app -t $TRAVIS_BRANCH@$TRAVIS_BUILD_NUMBER
   - API_URL=https://tdb-service.herokuapp.com/api npm run build:prod
 
