--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,6 @@ before_deploy:
 deploy:
   provider: script
   script: deployment/toherokustatic.sh
+  skip_cleanup: true
   on: 
     branch: master
