--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,11 @@ before_deploy:
 
 deploy:
   skip_cleanup: true
-  provider: script
-  script: deployment/to_heroku.sh develop
-  on:
-    branch: develop
-  
+  - provider: script
+    script: deployment/to_heroku.sh develop
+    on:
+      branch: develop
+  - provider: script
+    script: deployment/to_heroku.sh master
+    on:
+      branch: master
