--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ cache:
 script: 
   - npm test
   - $TRAVIS_BUILD_DIR/upload.sh -p tdb-app -t $TRAVIS_BRANCH@$TRAVIS_BUILD_NUMBER
-  - API_URL=https://tdb-service.herokuapp.com/api npm run build:prod
+  - sed "s/http:\/\/localhost:8080\/api/https:\/\/tdb-service.herokuapp.com\/api/g" env.js
+  - npm run build:prod
 
 before_deploy:
   - mkdir -p heroku/public
