--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:1.13.8-alpine
 COPY ./public /usr/share/nginx/html
-COPY ./docker-entrypoint.sh /
+COPY ./docker/docker-entrypoint.sh /
 ENTRYPOINT ["/docker-entrypoint.sh"]
