--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ deploy:
 after_success:
   - docker login -u $DOCKER_USER -p $DOCKER_PW
   - export REPO=dasnervtdoch/tdb-app
-  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH.$TRAVIS_BUILD_NUMBER ; fi`
-  - docker build -f build/docker/jdk8/Dockerfile -t $REPO:$TAG .
-  - docker push $REPO
+  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo "$TRAVIS_BRANCH.$TRAVIS_BUILD_NUMBER" ; fi`
+  - echo $TAG
+  # - docker build -f build/docker/jdk8/Dockerfile -t $REPO:$TAG .
+  # - docker push $REPO
