--- a/.travis.yml
+++ b/.travis.yml
@@ -37,10 +37,6 @@ deploy:
 after_success:
   - docker login -u $DOCKER_USER -p $DOCKER_PW
   - export REPO=dasnervtdoch/tdb-app
-  # - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo "$TRAVIS_BRANCH.$TRAVIS_BUILD_NUMBER" ; fi`
-  # - echo $TAG
-  # - docker build -f build/docker/jdk8/Dockerfile -t $REPO:$TAG .
-  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BUILD_NUMBER ; fi`
-  - docker build -f build/docker/jdk8/Dockerfile -t $REPO:$TRAVIS_BRANCH.$TAG .
-  - docker images
+  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo "$TRAVIS_BRANCH.$TRAVIS_BUILD_NUMBER" ; fi`
+  - docker build -f docker/Dockerfile -t $REPO:$TAG .
   - docker push $REPO
