--- a/.travis.yml
+++ b/.travis.yml
@@ -37,8 +37,7 @@ deploy:
   skip_cleanup: true    
 
 after_success:
-  - docker login -u $DOCKER_USER -p $DOCKER_PW
-  - export REPO=dasnervtdoch/tdb-app
-  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo "$TRAVIS_BRANCH.$TRAVIS_BUILD_NUMBER" ; fi`
-  - docker build -f docker/Dockerfile -t $REPO:$TAG .
-  - docker push $REPO
+  # will only build and push for master or tag
+  # master --> latest
+  # tag --> 1.0.1
+  - ./docker/build-push-docker.sh
