--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   },
   "engines": {
     "node": "8.9.3",
-    "npm": "5.5.1",
-    "yarn": "1.9.4"
+    "npm": "5.5.1"
   },
   "devDependencies": {
     "chart.js": "^2.7.1",
